terraform/stage/vm/main.tf
#Define local variables

locals {
  cidr_block      = "10.0.0.0/24"
  security_groups = "module.poc_sec_group.sec_group_id"
  subnet_id       = "module.poc_subnet.subnet_id"
}

#create VPC

module "poc_vpc" {
  source     = "../../modules/vpc"
  cidr_block = local.cidr_block
}


#Create Security Group
module "poc_sec_group" {
  source           = "../../modules/sec_group"
  sec_group_name   = "my_security_group"
  sec_group_vpc_id = module.poc_vpc.vpc_id
}

#Create subnet

module "poc_subnet" {
  source     = "../../modules/subnet"
  cidr_block = local.cidr_block
  vpc_id     = module.poc_vpc.vpc_id
}

#Create the primary and standby servers

module "db1" {
  source          = "../../modules/vm"
  instance_type   = "t2.micro"
  ami_name        = "ami-192a9460"
  vpc_security_group_ids = [module.poc_sec_group.sec_group_id]
  subnet_id       = module.poc_subnet.subnet_id
}

module "db2" {
  source          = "../../modules/vm"
  instance_type   = "t2.micro"
  ami_name        = "ami-192a9460"
  vpc_security_group_ids = [module.poc_sec_group.sec_group_id]
  subnet_id       = module.poc_subnet.subnet_id
}

#Add an elastic IP to the vms
resource "aws_eip" "db1" {
  instance = module.db1.vm_id
  vpc      = true
}

resource "aws_eip" "db2" {
  instance = module.db2.vm_id
  vpc      = true
}

#Set up an internet gateway to route to your VPC
resource "aws_internet_gateway" "poc_gateway" {
  vpc_id = module.poc_vpc.vpc_id
}


#Create a route table 

resource "aws_route_table" "poc_route_table" {
  vpc_id = module.poc_vpc.vpc_id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.poc_gateway.id
  }
}


resource "aws_route_table_association" "poc_subnet_to_routetable" {
  subnet_id      = module.poc_subnet.subnet_id
  route_table_id = aws_route_table.poc_route_table.id
}

resource "aws_key_pair" "deployer" {
  key_name   = "deployer-key"
  public_key = file("/mnt/c/Main/08_keys/public_key.pub")
}


# generate inventory file for Ansible
resource "local_file" "ansible_conf" {
  content = templatefile("../../../ansible/templates/hosts.tpl",
    {
      db1_public_ip = aws_eip.db1.public_ip
      db2_public_ip = aws_eip.db2.public_ip
    }
  )
  filename = "../../../ansible/hosts"
}
